# cei-exam-platform

./: .env.example  .gitignore  DEPLOYMENT.md  DOCUMENTATION.md  QUICKSTART.md  RAPPORT_TECHNIQUE.md  README.md  app.py  check_database.py  create_admin.py  csv_import_routes.py  ecosystem.config.js  export_route.py  gunicorn.conf.py  models.py  populate_maquette.py  proctoring_routes.py  pyproject.toml  requirements.txt  restart.sh  swagger_docs.py  utils.py
agent_proctor/: __init__.py  config.py  ecosystem.agent.config.js  email_alerts.py  monitor.py  run.py
scripts/: backup.sh  deploy.sh  setup_db.sh  update.sh
static/css/: landing.css  style.css  style1.css  theme.css
static/js/: app.js  app_maquette.js  face_detector.js  site_translator.js  translations.js
templates/: guide_student.html  guide_surveillant.html  guide_teacher.html  index.html  index1.html  landing.html  landing1.html  landing_v11.html  proctor_dashboard.html  proctor_exam.html  terms.html
